packages/rsx/tests/snapshots/rsx_diff__create_template.snap
---
source: packages/rsx/tests/rsx_diff.rs
expression: template
---
Template {
    name: "testing",
    roots: [
        Element {
            tag: "svg",
            namespace: Some(
                "svg",
            ),
            attrs: [
                Dynamic {
                    id: 0,
                },
                Static {
                    name: "height",
                    value: "100px",
                    namespace: Some(
                        "style",
                    ),
                },
                Dynamic {
                    id: 1,
                },
                Static {
                    name: "height2",
                    value: "100px",
                    namespace: None,
                },
            ],
            children: [
                Element {
                    tag: "p",
                    namespace: None,
                    attrs: [],
                    children: [
                        Text {
                            text: "hello world",
                        },
                    ],
                },
                Dynamic {
                    id: 0,
                },
            ],
        },
    ],
    node_paths: [
        [
            0,
            1,
        ],
    ],
    attr_paths: [
        [
            0,
        ],
        [
            0,
        ],
    ],
}
